--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -543,6 +543,9 @@ header {
 
 @media screen and (max-width: 1092px) {
 
+
+
+
   .header-1 {
     display: none;
   }
@@ -553,7 +556,10 @@ header {
     .header-top-section__wrapper-logged {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 7px;
+      grid-gap: 15px;
+      padding:10px;
+      border-top: 2px solid #fff;
+      border-bottom: 2px solid #fff;
     }
   }
 
@@ -572,7 +578,7 @@ header {
 
   .header-nav__button.mob-menu {
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 10px;
     display: flex !important;
     justify-content: center;
     align-items: center;
@@ -621,13 +627,28 @@ header {
 
 
   .mobile-menu-wrap {
-    height: 0;
-    visibility: hidden;
+    // height: 0;
+    // visibility: hidden;
+    display: none;
+    position: relative;
+    margin-left: -35px;
+    margin-right: -35px;
   }
   .mobile-menu-wrap.show{
+    // height: 100%;
+    display: block;
+    // visibility: visible;
+
+  }
+  .mobile-menu-wrap.show:after{
+    content:'';
+    width: 150vw;
+    left: -25%;
     height: 100%;
-    visibility: visible;
-    transition: 0.3s;
+    background: rgba(62, 185, 238, 0.59);
+    top:0;
+    position: absolute;
+    z-index: -1;
   }
   .header__overlay-1 {
     height: 0;
@@ -636,4 +657,163 @@ header {
   .header__overlay-2 {
     top: 0
   }
+  .navigation__list{
+    flex-direction: column;
+    li{
+      height: 45px;
+      line-height: 43px;
+ 
+      a{
+        display: block;
+        width: 100%;
+        padding:0 15px;
+        padding-bottom: 0;
+        border-bottom: 1.5px solid #fff;
+        font-size: 0.875em;
+        transition: 0.3s;
+      }
+      a:hover{
+        background: rgba(6, 166, 235, 0.59);
+        transition: 0.3s;
+      }
+    }
+    li:not(:last-child){
+      margin: 0;
+    }
+  }
+  .header-top-section__button{
+    padding-left: 25px;
+  }
+  .header-top-section__button--exit{
+    padding-left: 0;
+  }
+  .header-2 .header-top-section__button:before{
+    left: 13px!important;
+  }
+  .header-2 .header-top-section__wrapper-logged .header-top-section__button:before{
+    left: 0!important;
+  }
+  .header-2 .header-top-section__wrapper-logged .header-top-section__link{
+    border-left: 0;
+  }
+  .header-top-section__button--exit i {
+   position: relative;
+   left: 4px;
+  }
+  .header__main-bg.big-img{
+    height: 1020px;
+  }
+
+
+  .header-top-section__wrapper{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:45px;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+   
+    a, button{
+     
+      transition: 0.3s;
+      padding-left: 25px!important;
+      text-align: left;
+    }
+    a:hover, button:hover{
+      background: rgba(6, 166, 235, 0.59);
+      transition: 0.3s;
+    }
+    
+  }
+  .header-top-section__wrapper:after{
+    display: none;  
+  }
+
+  .header-top-section__wrapper .header-top-section__link{
+    padding-left: 0 !important;
+    .header-top-section__button.header-top-section__button--favourites{
+      padding-left: 35px !important;
+    }
+  }
+  .header-top-section__button.header-top-section__button--sign-in-up{
+    order: -1;
+    padding-left: 35px!important;
+  }
+  .header-top-section__button:before {
+    left: 12px !important;
+  }
+
+  .header-top-section__link{
+    border-left: 2px solid #fff;
+  }
+  .header-top-section__button{
+    font-size: 0.875em;
+  }
+  .header-top-section__button:before{
+    transform:translateY(-55%)
+  }
+
+
+  .header-1 .header-top-section__link{
+    border-left: 0;
+  }
+  
+  .header-1 .header-top-section__button:before{
+    left: 0!important;
+  }
+  .header-1 .header-top-section__link{
+    border-left: 2px solid #fff;
+  }
+  // .header-2 .header-top-section__wrapper-logged .header-top-section__button:before{
+  //   left: 25px !important;
+  // }
 }
+
+@media screen and (max-width: 640px){
+  .header-2 .header-top-section__wrapper-logged{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 576px){
+  .mobile-menu-wrap {
+    display: none;
+    position: relative;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
+
+@media screen and (max-width: 420px){
+  .header-top-section__button:before{
+    height: 100%;
+    height:20px;
+  }
+  .header-2 .header-top-section__wrapper-logged .header-top-section__button i{
+    font-size: 16px;
+  }
+  .header-2 .header-top-section__wrapper-logged {
+    // grid-template-columns: repeat(1, 1fr);
+    .header-top-section__button{
+        font-size:12px;
+      }
+    }
+    .navigation__list li a,
+    .header-top-section__wrapper a, .header-top-section__wrapper button{
+      font-size: 12px;
+    }
+}
+
+
+  @media screen and (max-width: 360px){
+    .header-2 .header-top-section__wrapper-logged {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .header-nav__logo-1 {
+      height: 34px;
+    }
+    .header-nav__logo-2{
+      height: 28px;
+    }
+  }
+
