--- a/src/components/HomePage/HomeNews/SingleNews/SingleNews.scss
+++ b/src/components/HomePage/HomeNews/SingleNews/SingleNews.scss
@@ -46,3 +46,12 @@
     // white-space: pre-wrap;
   }
 }
+
+
+
+@media screen and (max-width: 768px){
+  .home-news-card{
+    max-width: 325px;
+    margin: 0 auto;
+  }
+}
