--- a/src/components/HomePage/HomeAdsList/HomeAdsList.scss
+++ b/src/components/HomePage/HomeAdsList/HomeAdsList.scss
@@ -11,9 +11,14 @@
     font-size: 30px;
     font-family: "HelveticaNeueCyr", sans-serif;
     font-weight: 500;
-
+    // font-family: 'HelveticaNeueCyrmedium';
     a{
       color: #65c1eb;
+      transition:0.2s;
+    }
+    a:hover{
+      color: #007ba9;
+      transition:0.2s;
     }
   }
   &__text {
@@ -30,4 +35,41 @@
     justify-items: center;
     grid-gap: 30px 6px;
   }
+}
+
+@media screen and (max-width: 1200px){
+  .home-ads-list__wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .vertical-card__info-wrapper{
+    height: 170px;
+  }
+}
+
+
+@media screen and (max-width: 991px){
+  .home-ads-list__title{
+    font-size: 24px;
+  }
+  
+  .home-ads-list__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .home-ads-list__text{
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 576px){
+
+  .home-ads-list__wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .home-ads-list__title {
+    font-size: 20px;
+}
+.home-ads-list__text{
+  font-size: 14px;
+}
+
 }
