--- a/src/components/HomePage/HomeNews/HomeNews.scss
+++ b/src/components/HomePage/HomeNews/HomeNews.scss
@@ -40,3 +40,14 @@
     grid-gap: 0 20px;
   }
 }
+
+
+@media screen and (max-width: 768px){
+  .home-news__wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 0 20px;
+
+   
+  }
+}
