--- a/src/components/DetailsPage/DetailsPage.scss
+++ b/src/components/DetailsPage/DetailsPage.scss
@@ -64,6 +64,7 @@
     text-align-last: center;
     -webkit-appearance: none;
     -moz-appearance: none;
+    outline: none;
     cursor: pointer;
   }
   &__square-meter {
