--- a/src/components/HomePage/HomeNews/HomeNews.scss
+++ b/src/components/HomePage/HomeNews/HomeNews.scss
@@ -41,13 +41,27 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .home-news {
+    padding: 20px 0 0;
+    &__wrapper {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 0 20px;
+    }
+    &__title {
+      text-align: center;
+    }
+    &__allnews-link {
+      align-self: center;
+      margin: 15px 0 25px;
+      font-size: 18px;
+    }
+  }
+}
 
-@media screen and (max-width: 768px){
-  .home-news__wrapper {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 0 20px;
-
-   
+@media (max-width: 400px) {
+  .home-news {
+    margin-bottom: 0;
   }
 }
