--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -20,6 +20,8 @@ $secondary-button-color-darkblue: #256799;
 $copyrights-color-lightblue: #a4d2e9;
 $secondary-navigation-color-black: #808080;
 $orange-color: #ff6300;
+$orange-gradient-button-color: 
+linear-gradient(0deg, rgba(239, 99, 1, 1) 0%, rgba(255, 197, 41, 1) 100%);
 
 $darkblue-hover-color: #007ba9;
 
