--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -105,6 +105,14 @@
     height: 100%;
   }
 }
+
+@media (max-width: 1200px) {
+  .news-filters {
+    order: 1;
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (max-width: 1070px){
   .foot-wrap-link{
     flex-direction: column;
