--- a/src/components/NewsPage/NewsPage.scss
+++ b/src/components/NewsPage/NewsPage.scss
@@ -1,8 +1,8 @@
-@media screen and (max-width: 1200px){
-    .common-section__wrapper{
-        flex-direction: column-reverse;
-    }
-    .heading-filters{
-        height: 100%;
-    }
-} 
+// @media screen and (max-width: 1200px){
+//     .common-section__wrapper{
+//         flex-direction: column-reverse;
+//     }
+//     .heading-filters{
+//         height: 100%;
+//     }
+// } 
