--- a/src/components/ReduxForms/FiltersForm/AsideFilters.scss
+++ b/src/components/ReduxForms/FiltersForm/AsideFilters.scss
@@ -1,19 +1,22 @@
 @import "../../../styles/utils";
 
 .common-filters {
+  position: relative;
   min-width: 270px;
   // height: 1000px;
   height: 100%;
   margin-right: 25px;
+  margin-bottom: 20px;
   padding: 20px 15px;
   border-radius: 5px;
   background: #fff;
   border: 1px solid $form-border-color-lightblue;
 
-  .topFilter{
+  .topFilter {
     position: relative;
-   padding-top: 0!important;
-    .searchById{
+    padding-top: 0!important;
+    .searchById {
+      width: 310px;
       display: none;
       position: absolute;
       right: 0;
@@ -23,12 +26,27 @@
       // border: 1px solid #ccc;
       border: 1px solid #c9e8fb;
       background: #fff;
-      padding: 5px 15px 15px;
-      height: 100px;
-      .idField{
+      padding: 10px 15px 15px;
+      // height: 100px;
+      .window-id {
         display: flex;
-        margin-top: 10px;
-        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        &__input {
+          flex-basis: 74%;
+          width: 100%;
+        }
+        &__button {
+          &--find {
+            flex-basis: 24%;
+          }
+          &--cancel {
+            flex-basis: 50%;
+            margin: 0 auto;
+            background: none;
+            height: fit-content;
+          }
+        }
         input[type="number"]{
           padding: 10px 10px 10px 28px;
           background: url('/domlook/img/filter/lupa.svg') no-repeat left 5px center;
@@ -59,8 +77,14 @@
           margin-left: 3px;
           cursor:pointer;
         }
-     
       }
+      // .idField{
+      //   display: flex;
+      //   margin-top: 10px;
+      //   align-items: center;
+        
+     
+      // }
       .cancelSearchById{
         text-align: center;
         margin-top: 10px;
@@ -73,7 +97,7 @@
    .searchById.show{
       display: block;
     }
-    label[for='status-filter']{
+    label[for='status-filter'] {
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -223,6 +247,7 @@
     display: block;
   }
   .block{
+    position: relative;
     display: flex;
     a{
       width:100%;
@@ -333,5 +358,140 @@
   input[type="submit"]:hover{
     opacity:0.8;
     transition: 0.3s;
+  }
+  &__close-btn {
+    font-size: 36px;
+    height: fit-content;
+    width: fit-content;
+  }
+}
+
+.common-filters .common-filters__close-btn {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  height: fit-content;
+  width: fit-content;
+  background: inherit;
+  font-family: "Nunito", sans-serif;
+  color: #256799;
+}
+
+.common-filters .common-filters__close-btn:hover {
+  color: #3eaad8;
+}
+
+.common-filters .common-filters-form__submit {
+  margin-top: 10px;
+}
+
+@media (max-width: 1200px) {
+  .common-filters {
+    width: 0;
+    min-width: 0;
+    padding: 60px 0 0;
+    margin: 0;
+    overflow: hidden;
+    border: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: #333;
+    transition: 0.5s;
+    &--show {
+      width: 270px;
+      padding: 60px 15px 15px;
+      // transition: 0.3s;
+    }
+    .topFilters {
+      .searchById.show {
+        .window-id {
+          &__input {
+            flex-basis: 100%;
+          }
+          &__button {
+            &--find {
+              flex-basis: 24%;
+            }
+            &--cancel {
+              flex-basis: 50%;
+              margin: 0 auto;
+              background: none;
+              height: fit-content;
+            }
+          }
+        }
+      }
+    }
+    .topFilter .searchById .window-id__input {
+      flex-basis: 100%;
+      margin-bottom: 10px;
+    }
+    .topFilter .searchById .window-id__button--find {
+      flex-basis: 30%;
+    }
+    .topFilter .searchById .window-id__button--cancel {
+      flex-basis: 25%;
+      margin: 0;
+      align-self: center;
+    }
+  }
+  .common-filters .block label {
+    color: #fff;
+    font-size: 13px;
+  }
+  .common-filters .block label #status-filter {
+    color: #fff;
+    background: #333;
+  }
+  .common-filters .common-filters__close-btn {
+    display: block;
+  }
+  .common-filters .topFilter .searchById {
+    width: calc(100% + 30px);
+    top: -60px;
+    z-index: 1;
+    margin: 0 -15px;
+    transform: none;
+  }
+  .common-filters .additional-param .terms .label-filter,
+  .common-filters .additional-param .parametrs .label-filter {
+    color: #fff;
+  }
+}
+
+@media (max-width: 800px) {
+  .common-top-filters {
+    &__block:nth-child(2) {
+      flex-wrap: wrap;
+    }
+    &__amount {
+      flex-basis: 100%;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .common-top-filters {
+    &__sort {
+      flex-basis: 100%;
+      margin-bottom: 10px;
+    }
+    &__post-date {
+      flex-basis: 100%;
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .common-top-filters__block:nth-child(2),
+  .common-top-filters__block:nth-child(2) select {
+    font-size: 14px;
   }
 }
