--- a/src/components/NewsPage/NewsDetailsPage/NewsDetailsPage.scss
+++ b/src/components/NewsPage/NewsDetailsPage/NewsDetailsPage.scss
@@ -85,6 +85,14 @@
     &__photo-wrapper {
       height: 270px;
     }
+    &__text {
+      font-size: 14px;
+      line-height: normal;
+    }
+    &__important-info {
+      font-size: 14px;
+      line-height: normal;
+    }
   }
 }
 
