--- a/src/components/AddAdPage/AddAd.scss
+++ b/src/components/AddAdPage/AddAd.scss
@@ -123,7 +123,7 @@
      
 }
 
-.bottom-part-form{
+.bottom-part-form {
     margin-top: 40px;
     display: flex;
     flex-direction: column;
@@ -258,9 +258,6 @@
   }
 }
 
-
-
-
 .orangeButton{
   background-color: #ec894d;
   color:#fff;
@@ -278,4 +275,72 @@
   color: red;
   font-size: 12px;
   font-weight: 400;
+}
+
+@media (max-width: 1000px) {
+  #ad-info .wrap-form {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .bottom-part-form .parametrs .facilities {
+    height: 200px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  #ad-info .wrap-form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .bottom-part-form {
+    .description,
+    .street-address {
+      grid-template-columns: 1fr;
+    }
+    .wrap-addintional-info {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  .bottom-part-form .parametrs .facilities {
+    height: 240px;
+  }
+}
+
+@media (max-width: 750px) {
+  .bottom-part-form .parametrs .facilities {
+    height: 280px;
+  }
+}
+
+@media (max-width: 600px) {
+  .bottom-part-form .parametrs .facilities {
+    height: 370px;
+  }
+}
+
+@media (max-width: 550px) {
+  #ad-info .wrap-form {
+    grid-template-columns: 1fr;
+  }
+  #ad-info .wrap-form label {
+    width: 250px;
+    margin: 0 auto;
+  }
+  .bottom-part-form {
+    .wrap-addintional-info {
+      grid-template-columns: 1fr;
+    }
+  }
+  .inner-container {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+  }
+  .bottom-part-form .description textarea {
+    height: 250px;
+  }
+}
+
+@media (max-width: 400px) {
+  .bottom-part-form .parametrs .facilities {
+    height: fit-content;
+  }
 }
