fixed filter select look

--- a/src/components/ReduxForms/FiltersForm/AsideFilters.scss
+++ b/src/components/ReduxForms/FiltersForm/AsideFilters.scss
@@ -276,8 +276,8 @@
         border-radius: 5px;
         background: url('/domlook/img/home-page/bo_pole.png') no-repeat;
         background-size: cover;
-        background-position-y: -2px;
-        background-position-x: 0px;
+        background-position-y: 0;
+        background-position-x: 0;
         box-shadow: 0;
         font-size: 14px;
         color: #414141;
